--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "nprogress": "^0.2.0",
+    "vant": "^1.6.22",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
